--- a/css/master.css
+++ b/css/master.css
@@ -14,7 +14,7 @@ body {
   min-height: 100vh;
 }
 .overlay.active {
-  position: absolute;
+  position: fixed;
   opacity: 0.7;
   background-color: black;
   top: 0;
@@ -169,7 +169,7 @@ nav .menu{
         top: 71px;
         background-color: var(--main-color);
         width: 100%;
-        right: -700px;
+        right: -900px;
         transition-duration: 0.5s;
         padding: 0;
         gap: 0;
