--- a/css/products.css
+++ b/css/products.css
@@ -330,82 +330,68 @@
 
 /* End Header */
 
-/* Start Landing */
-.landing{
-    width: 100%;
-    height: calc(100vh - 120px);
-    background-color: gray;
-}
-/* End Landing */
 
-/* Start Features */
-.features {
-    margin-top: 50px;
-}
-.features .container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    column-gap: 150px;
-    row-gap: 50px;
-}
-.features .container .break{
-    width: 100%;
-}
-.features .container .card {
-    text-align: center;
-    
-}
+/* Start Products */
 
-/* End Features */
-
-/* Start Popular */
-.popular {
-    margin-top: 50px;
-}
-.popular .container .title{
+.products-page .container .title{
     font-size: 22px;
     font-weight: bold;
 }
-.popular .container .products{
+.products-page .parent{
+    display: flex;
+    gap: 30px;
+}
+.products-page .parent .filters{
+    min-width: 250px;
+    background-color: gray;
+}
+.products-page .parent .main{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+}
+.products-page  .main .products{
     display: grid;
     grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
     padding: 15px;
     gap: 15px;
 }
- .one-pro {
+.products-page  .main .one-pro {
     background-color:white;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid var(--input-color);
-    
+
+
 }
- .one-pro  p {
+.products-page  .main .one-pro  p {
     margin: 0;
 }
- .one-pro .img {
+.products-page  .main .one-pro .img {
     width: 100%;
     height: 225px;
     display: flex;
     align-items: center;
 }
- .one-pro  .img img {
+.products-page  .main .one-pro  .img img {
     width: 100%;
     border-radius: 5px;
     max-height: 100%;
 
 }
- .one-pro .name-line {
+.products-page  .main .one-pro .name-line {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 15px 0;
 }
- .one-pro .name-line .name {
+.products-page  .main .one-pro .name-line .name {
     font-size: 22px;
     font-weight: bold;
 }
- .one-pro .name-line .stock {
+.products-page  .main .one-pro .name-line .stock {
     font-size: 12px;
     border: 1px solid var(--input-color);
     padding: 5px;
@@ -413,12 +399,12 @@
     line-height: 1.2;
     cursor: default;
 }
- .one-pro .desc {
+.products-page  .main .one-pro .desc {
     margin: 15px 0;
     color: var(--disabled-color);
 }
 
- .one-pro .price-line {
+.products-page  .main .one-pro .price-line {
     display: flex;
     gap: 5px;
     font-size: 25px;
@@ -426,12 +412,12 @@
     margin: 15px 0;
 
 }
- .one-pro .add {
+.products-page  .main .one-pro .add {
     display: flex;
     align-items: center;
     gap: 15px;
 }
- .one-pro .add .add-cart {
+.products-page  .main .one-pro .add .add-cart {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -446,16 +432,16 @@
     transition-duration: 0.3s;
     cursor: pointer;
 }
- .one-pro .add-cart .text {
+.products-page  .one-pro .add-cart .text {
     flex-grow: 1;
 }
 
- .one-pro .add .add-cart:hover{
+.products-page  .main .one-pro .add .add-cart:hover{
     background-color: var(--hover-color);
 } 
 
 
-  .one-pro .fav-btn {
+.products-page  .one-pro .fav-btn {
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -468,15 +454,15 @@
 
 }
 
- .one-pro .fav-btn:hover {
+.products-page  .one-pro .fav-btn:hover {
     border-color: var(--hover-color);
 }
 
- .one-pro .fav-btn:hover::before {
+.products-page  .one-pro .fav-btn:hover::before {
     color: var(--hover-color);
 }
 
-  .one-pro .fav-btn::before {
+.products-page  .one-pro .fav-btn::before {
     position: absolute;
     font-size: 25px;
     top: 50%;
@@ -484,92 +470,46 @@
     transform: translate(-50%, -50%);
     color: var(--default-color);
 }
-  .one-pro .fav-btn.active:hover::before {
+.products-page  .one-pro .fav-btn.active:hover::before {
     color: red;
 }
 
-  .one-pro .fav-btn.active::before {
+.products-page  .one-pro .fav-btn.active::before {
     color: red;
     font-weight: 900;
 }
-/* End Popular */
 
-/* Start Categories */
-.categories .container  .cat {
-    margin-top: 50px;
+.products-page .main .page-num{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
 }
-.categories .container .cat-header {
+.products-page .main .page-num .nums {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--hover-color);
-    border-radius: 5px;
-    padding: 20px;
+    gap: 10px;
 }
-.categories .container .cat-header h3 {
-    color: white;
-    font-size: 40px;
-    margin: 0;
-}
-.categories .container .cat-header a{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    color: white;
-    position: relative;
-    letter-spacing: 5px;
-    padding-right: 35px;
-
-}
-.categories .container .cat-header a::before{
-    font-family: "Font Awesome 6 Free";
-    position: absolute;
-    font-weight: 900;
-    right: 0;
-}
-
-.categories .container  .cat .parent {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    justify-content: space-between;
-}
-.categories .container  .cat .parent i {
-    margin: 0px;
-    font-size: 25px;
-    font-weight: 900;
-    padding: 10px;
+.products-page .main .page-num .nums span {
+    width: 25px;
+    height: 25px;
+    line-height: 27px;
+    text-align: center;
     cursor: pointer;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 20px;
 }
-.categories .container  .cat .parent .slider{
-    flex-grow: 1;
-    overflow: hidden;
-}
-.categories .container  .cat .main {
-    display: flex;
-    justify-content:flex-start;
-    gap: 12px;
-    transition-duration: 0.5s
+.products-page .main .page-num .nums span.active{
+    background-color: var(--default-color);
+    color: white;
 
 }
-.categories .container  .cat .main .one-pro {
-    width: 305px;
-    min-width: 305px;
+.products-page .main .page-num i{
+    font-size: 23px;
+    cursor: pointer;
+    line-height: 1.3;
 }
-
-@media (max-width: 600px) {
-    .categories .container .one-pro {
-        min-width: 99% !important;
-     }
-     .categories .container .cat-header h3 {
-        font-size: 30px
-    }
-    .categories .container .cat-header a{
-        font-size: 20px;
-    }
-    .categories .container .cat-header {
-        padding: 15px;
-    }
-
-}
-
-/* End Categories */
+/* End Products */
