--- a/css/sign.css
+++ b/css/sign.css
@@ -3,7 +3,6 @@
     position: sticky;
     top: 0;
     background-color: white;
-    z-index: 100;
 }
 .header .container {
     background-color: white;
@@ -330,246 +329,229 @@
 
 /* End Header */
 
-/* Start Landing */
-.landing{
-    width: 100%;
-    height: calc(100vh - 120px);
-    background-color: gray;
-}
-/* End Landing */
 
-/* Start Features */
-.features {
-    margin-top: 50px;
-}
-.features .container {
+/* start sign */
+.forms
+{
+    width: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    column-gap: 150px;
-    row-gap: 50px;
-}
-.features .container .break{
-    width: 100%;
-}
-.features .container .card {
-    text-align: center;
-    
+    align-items: center;
 }
 
-/* End Features */
-
-/* Start Popular */
-.popular {
+ .form
+{
+    width: 500px;
+    background-color: #ffffff;
+     border-radius: 10px;
     margin-top: 50px;
+    box-shadow: 2px 2px 10px silver;
+    margin: auto;
+    position: absolute;
+    top :200px;
+
 }
-.popular .container .title{
-    font-size: 22px;
-    font-weight: bold;
+
+.form.logup
+{
+    opacity: 0;
+    pointer-events: none;
+
 }
-.popular .container .products{
-    display: grid;
-    grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
-    padding: 15px;
-    gap: 15px;
+.forms.show-signup .form.logup
+{
+
+     opacity: 1;
+    pointer-events:auto ;
+    z-index: 1;
 }
- .one-pro {
-    background-color:white;
-    padding: 10px;
+
+
+.LOG
+{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: var(--default-color);
+    font-size: 26px;
+    font-weight: 600;
+}
+ .form input
+{
+    background-color: var(--input-color);
+
+}
+
+ .form .conf_name
+{
+    height: 80px;
+
+}
+ .form .conf_name label
+{
+    padding-right:100px;
+    padding-left: 35px
+}
+ .form .conf_name input
+{
     border-radius: 5px;
-    border: 1px solid var(--input-color);
+    margin-left: 13px;
+    padding: 15px;
+    border: 1px solid var(--default-color);
+    outline: none;
+}
+
+ .form .conf_phn
+{
+    height: 80px;
+}
+.form .conf_phn label
+{
+    margin-right: 17px;
+    margin-left: 12px;
+}
+
+ .form .conf_phn input
+{
+    width: 70%;
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid var(--default-color);
+}
+
+.form .conf_emil
+{
+    height: 80px;
+}
+ .form .conf_emil label
+{
+    margin-right: 60%;
+    margin-left: 12px;
+}
+.form .conf_emil input
+{
+    width: 93%;
+    padding: 15px;
+    border-radius: 5px;
+    margin-left: 12px;
+    border: 1px solid var(--default-color);
+}
+ .form .conf_pass
+{
+    height: 120px;
+}
+
+.form .conf_pass label
+{
+    margin-right: 66%;
+    margin-left: 12px
     
 }
- .one-pro  p {
-    margin: 0;
-}
- .one-pro .img {
-    width: 100%;
-    height: 225px;
-    display: flex;
-    align-items: center;
-}
- .one-pro  .img img {
-    width: 100%;
+ .form .conf_pass input
+{
+    width: 93%;
+    padding: 15px;
     border-radius: 5px;
-    max-height: 100%;
+    margin-left: 12px;
+    border: 1px solid var(--default-color);
+}
 
+
+
+ .form .conf_cpass label
+{
+    margin-right: 60%;
+    margin-left: 12px;
 }
- .one-pro .name-line {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 15px 0;
+    
+
+ .form .conf_pass p{
+
+
+color: var(--default-color);
+display: flex;
+margin-left: 14px;
+font-size: 12px;
 }
- .one-pro .name-line .name {
-    font-size: 22px;
-    font-weight: bold;
+ .form .conf_cpass
+{
+    height: 90px;
 }
- .one-pro .name-line .stock {
-    font-size: 12px;
-    border: 1px solid var(--input-color);
-    padding: 5px;
+ .form .conf_cpass input
+{
+    width:93%;
+    padding: 15px;
     border-radius: 5px;
-    line-height: 1.2;
-    cursor: default;
-}
- .one-pro .desc {
-    margin: 15px 0;
-    color: var(--disabled-color);
+margin-left: 12px;
+border: 1px solid var(--default-color);
 }
 
- .one-pro .price-line {
-    display: flex;
-    gap: 5px;
-    font-size: 25px;
-    font-weight: bold;
-    margin: 15px 0;
 
-}
- .one-pro .add {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
- .one-pro .add .add-cart {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    height: 40px;
-    flex-grow: 1;
+.form .submit{
+width: 93%;
+    padding: 15px;
+    color: white;
     background-color: var(--default-color);
     border-radius: 5px;
-    color: white;
-    font-weight: 500;
-    padding: 10px;
+    cursor: pointer;
+    margin-left: 12px;
+    transition: all 0.3 s ease;
+    
+}
+ .form .submit:hover
+{
+    background-color: var(--hover-color);
+}
+
+
+ .form .check
+{
     text-align: center;
-    transition-duration: 0.3s;
-    cursor: pointer;
 }
- .one-pro .add-cart .text {
-    flex-grow: 1;
-}
-
- .one-pro .add .add-cart:hover{
-    background-color: var(--hover-color);
-} 
-
-
-  .one-pro .fav-btn {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border: 1px solid var(--default-color);
-    border-radius: 5px;
-    position: relative;
-    transition-duration: 0.3s;
-    cursor: pointer;
-
+ .form .log_email {
+    height: 115px;
+    }
+ .form .log_email label
+{
+    margin-right: 60%;
+    margin-left: 12px
 }
 
- .one-pro .fav-btn:hover {
-    border-color: var(--hover-color);
-}
-
- .one-pro .fav-btn:hover::before {
-    color: var(--hover-color);
-}
-
-  .one-pro .fav-btn::before {
-    position: absolute;
-    font-size: 25px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--default-color);
-}
-  .one-pro .fav-btn.active:hover::before {
-    color: red;
-}
-
-  .one-pro .fav-btn.active::before {
-    color: red;
-    font-weight: 900;
-}
-/* End Popular */
-
-/* Start Categories */
-.categories .container  .cat {
-    margin-top: 50px;
-}
-.categories .container .cat-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--hover-color);
-    border-radius: 5px;
-    padding: 20px;
-}
-.categories .container .cat-header h3 {
-    color: white;
-    font-size: 40px;
-    margin: 0;
-}
-.categories .container .cat-header a{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    color: white;
-    position: relative;
-    letter-spacing: 5px;
-    padding-right: 35px;
-
-}
-.categories .container .cat-header a::before{
-    font-family: "Font Awesome 6 Free";
-    position: absolute;
-    font-weight: 900;
-    right: 0;
-}
-
-.categories .container  .cat .parent {
-    display: flex;
-    align-items: center;
+ .form .log_email input
+{
+    width: 93%;
     padding: 15px;
-    justify-content: space-between;
+    border-radius: 10px;
+    margin-left: 12px;
+    border: 1px solid var(--default-color);
+    margin-top: 18px;
+
 }
-.categories .container  .cat .parent i {
-    margin: 0px;
-    font-size: 25px;
-    font-weight: 900;
-    padding: 10px;
-    cursor: pointer;
+
+
+.form .log_pass {
+    height: 125px;
+    }
+.form .log_pass label
+{
+    margin-right: 60%;
+    margin-left: 12px
 }
-.categories .container  .cat .parent .slider{
-    flex-grow: 1;
-    overflow: hidden;
+
+ .form .log_pass input
+{
+    width: 93%;
+    padding: 15px;
+    border-radius: 10px;
+    margin-left: 12px;
+    border: 1px solid var(--default-color);
+    margin-top: 18px;
+
 }
-.categories .container  .cat .main {
+
+ .form.log_rem
+{
     display: flex;
-    justify-content:flex-start;
-    gap: 12px;
-    transition-duration: 0.5s
-
+    justify-content: flex-end;
 }
-.categories .container  .cat .main .one-pro {
-    width: 305px;
-    min-width: 305px;
-}
-
-@media (max-width: 600px) {
-    .categories .container .one-pro {
-        min-width: 99% !important;
-     }
-     .categories .container .cat-header h3 {
-        font-size: 30px
-    }
-    .categories .container .cat-header a{
-        font-size: 20px;
-    }
-    .categories .container .cat-header {
-        padding: 15px;
-    }
-
-}
-
-/* End Categories */
