--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
     top: 0;
     background-color: white;
     z-index: 100;
+    border-bottom: 1px solid var(--input-color) ;
 }
 .header .container {
     background-color: white;
