--- a/css/master.css
+++ b/css/master.css
@@ -13,6 +13,10 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
 }
+body.poped{
+  height: 100vh;
+  overflow-y: hidden;
+}
 a {
   text-decoration: none;
 }
@@ -25,6 +29,9 @@ input{
   border: none;
 }
 input:focus{
+  outline: none;
+}
+textarea:focus{
   outline: none;
 }
 .container {
