--- a/css/sign.css
+++ b/css/sign.css
@@ -1,11 +1,11 @@
 /* start sign */
 .forms
 {
-    width: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 100px 0;
 }
 
  .form
@@ -16,23 +16,13 @@
     margin-top: 50px;
     box-shadow: 2px 2px 10px silver;
     margin: auto;
-    position: absolute;
     top :200px;
+    display: none;
 
 }
 
-.form.logup
-{
-    opacity: 0;
-    pointer-events: none;
-
-}
-.forms.show-signup .form.logup
-{
-
-     opacity: 1;
-    pointer-events:auto ;
-    z-index: 1;
+.form.active{
+    display: block;
 }
 
 
@@ -63,11 +53,13 @@
 }
  .form .conf_name input
 {
-    border-radius: 5px;
+    border-radius: 10px;
     margin-left: 13px;
     padding: 15px;
     border: 1px solid var(--default-color);
     outline: none;
+    box-shadow: 0px 5px 20px silver;
+
 }
 
  .form .conf_phn
@@ -84,8 +76,9 @@
 {
     width: 70%;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 1px solid var(--default-color);
+    box-shadow: 0px 5px 20px silver;
 }
 
 .form .conf_emil
@@ -101,9 +94,10 @@
 {
     width: 93%;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-left: 12px;
     border: 1px solid var(--default-color);
+    box-shadow: 0px 5px 20px silver;
 }
  .form .conf_pass
 {
@@ -120,9 +114,10 @@
 {
     width: 93%;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-left: 12px;
     border: 1px solid var(--default-color);
+    box-shadow: 0px 5px 20px silver;
 }
 
 
@@ -150,9 +145,10 @@ font-size: 12px;
 {
     width:93%;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 10px;
 margin-left: 12px;
 border: 1px solid var(--default-color);
+box-shadow: 0px 5px 20px silver;
 }
 
 
@@ -161,11 +157,11 @@ width: 93%;
     padding: 15px;
     color: white;
     background-color: var(--default-color);
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
     margin-left: 12px;
     transition: all 0.3 s ease;
-    
+    box-shadow: 0px 5px 20px silver;
 }
  .form .submit:hover
 {
@@ -194,6 +190,7 @@ width: 93%;
     margin-left: 12px;
     border: 1px solid var(--default-color);
     margin-top: 18px;
+    box-shadow: 0px 5px 20px silver
 
 }
 
@@ -215,11 +212,50 @@ width: 93%;
     margin-left: 12px;
     border: 1px solid var(--default-color);
     margin-top: 18px;
-
+    box-shadow: 0px 5px 20px silver
 }
 
  .form.log_rem
 {
     display: flex;
     justify-content: flex-end;
+}
+
+@media (max-width: 600px)
+{
+    .form
+    {
+        width: 300px;
+    }
+    .form .log_email label,
+    .form .log_pass label{
+        font-size: 11px;
+    }
+    .form .conf_name label
+    {
+        font-size: 11px;
+        padding: 0px;
+        margin-right: 58px;
+        margin-left: 15px;
+    }
+    .form .conf_name input
+    {
+        width: 130px;
+        font-size: 10px;
+    }
+    .form .conf_phn label,
+    .form .conf_pass label,
+    .form .conf_emil label,
+    .form .conf_cpass label
+    {
+        font-size: 11px;
+    }
+    .form .conf_phn input
+    {
+        width: 93%;
+        margin-left: 12px;
+    }
+
+
+
 }
