--- a/css/header.css
+++ b/css/header.css
@@ -328,5 +328,18 @@
         font-size: 16px;
     }
 }
+@media (max-width: 400px) {
 
+    .header .logo {
+        font-size: 18px;
+    }
+    .header .btns a {
+        width: 30px;
+        height: 30px;
+    }
+    .header .logo img {
+        height: 85%;
+    }
+
+}
 /* End Header */
