--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@
 }
 .header .up {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-size: 14px;
     height: 40px;
