--- a/css/master.css
+++ b/css/master.css
@@ -12,6 +12,7 @@ html {
 }
 body {
   font-family: 'Montserrat', sans-serif;
+
 }
 body.poped{
   height: 100vh;
@@ -40,6 +41,18 @@ textarea:focus{
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--default-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--hover-color);
 }
 /* Large */
 @media (min-width: 1400px) {
