--- a/css/cart.css
+++ b/css/cart.css
@@ -81,7 +81,7 @@
     font-size: 30px;
     font-weight: bold;
     margin: 0;
-    color: var(--hover-color);
+    color: var(--default-color);
 
 }
 
