--- a/css/home.css
+++ b/css/home.css
@@ -46,16 +46,24 @@
     padding: 10px;
     border-radius: 5px;
     border: 1px solid var(--input-color);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     
 }
  .one-pro  p {
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0 20px 0 0;
+    height: 20px;
 }
  .one-pro .img {
     width: 100%;
     height: 225px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 5px;
 }
  .one-pro  .img img {
     width: 100%;
@@ -72,6 +80,7 @@
  .one-pro .name-line .name {
     font-size: 22px;
     font-weight: bold;
+    color: black;
 }
  .one-pro .name-line .stock {
     font-size: 12px;
@@ -80,6 +89,21 @@
     border-radius: 5px;
     line-height: 1.2;
     cursor: default;
+}
+.one-pro .name-line .stock.in
+{
+    border-color: #00c700;
+    color: #00c700;
+}
+.one-pro .name-line .stock.out
+{
+    border-color: #ff0000;
+    color: #ff0000;
+}
+.one-pro .name-line .stock.rem
+{
+    border-color: #fcb02b;
+    color: #fcb02b;
 }
  .one-pro .desc {
     margin: 15px 0;
@@ -216,7 +240,8 @@
     display: flex;
     justify-content:flex-start;
     gap: 12px;
-    transition-duration: 0.5s
+    transition-duration: 0.5s;
+    padding: 10px 0;
 
 }
 .categories .container  .cat .main .one-pro {
