--- a/css/footer.css
+++ b/css/footer.css
@@ -24,10 +24,23 @@ footer .content .logo {
     /* margin-right: 100px; */
 }
 
+footer .content .logo {
+
+    font-size: 28px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+footer .content .logo img {
+
+    width: 40px;
+}
+
 footer .content .shop {
     display: flex;
     flex-direction: column;
-    /* margin-right: 15px; */
 }
 
 footer .content .shop ul {
@@ -51,12 +64,7 @@ footer .content .shop ul i {
         text-align: center;
     }
 
-    footer .content .logo {
-        display: flex;
-        padding: 0px 20px;
 
-        background-color: #F2F2F2;
-    }
 
 }
 
