--- a/css/account_my_addresses.css
+++ b/css/account_my_addresses.css
@@ -12,7 +12,7 @@
 }
 
 .parent .one{
-    border: 2px solid black;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     aspect-ratio: 1/1;
     border-radius: 10px;
     padding: 10px 20px;
@@ -20,6 +20,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+.parent .one.def{
+    box-shadow: #c9cfff 0px 1px 2px 0px, #c9cfff  0px 2px 6px 2px;
+}
+
 .parent .one.add-btn
 {
     display: flex;
@@ -30,6 +35,8 @@
     color: var(--disabled-color);
     cursor: pointer;
     transition-duration: 0.3s;
+    order: -1;
+    box-shadow: none;
 }
 .parent .one.add-btn:hover
 {
@@ -52,7 +59,10 @@
     margin: 0;
     margin-bottom: 10px;
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .parent .one p:nth-child(3),
 .parent .one p:nth-child(4),
@@ -70,43 +80,46 @@
  
     
 }
-.parent .one .btns input
+.parent .one .btns input,
+.parent .one .btns a
 {
 
-    gap: 5px;
     font-size: 16px;
     color: white;
     font-weight: 600;
     cursor: pointer;
     transition-duration: 0.3s;
+    text-align: center;
+    appearance: button;
     
 }
 
-.parent .one .btns input:nth-child(1)
+.parent .one .btns .set-btn
 {
     width: 90%;
     background-color: var(--default-color);
 }
 
-.parent .one .btns input:nth-child(2)
+.parent .one .btns .remove-btn
 {
     width: 45%;
     background-color: red;
 }
-.parent .one .btns input:nth-child(3)
+.parent .one .btns .edit-btn
 {
     width: 45%;
     background-color: var(--disabled-color);
+    line-height: 1.3;
 }
-.parent .one .btns input:nth-child(1):hover
+.parent .one .btns .set-btn:hover
 {
     background-color: var(--hover-color);
 }
-.parent .one .btns input:nth-child(2):hover
+.parent .one .btns .remove-btn:hover
 {
     background-color: #d11212;
 }
-.parent .one .btns input:nth-child(3):hover
+.parent .one .btns .edit-btn:hover
 {
     background-color: #525252;
 }
