--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,8 @@
 /* Start Landing */
 .landing{
-    width: 100%;
-    height: calc(100vh - 120px);
-    background-color: gray;
+    /* width: 100%;
+    height: 500px; */
+    /* background-color: gray; */
 }
 /* End Landing */
 
@@ -22,6 +22,7 @@
 }
 .features .container .card {
     text-align: center;
+    width: 200px;
     
 }
 
@@ -32,7 +33,7 @@
     margin-top: 50px;
 }
 .popular .container .title{
-    font-size: 22px;
+    font-size: 35px;
     font-weight: bold;
 }
 .popular .container .products{
@@ -184,6 +185,79 @@
     color: red;
     font-weight: 900;
 }
+
+
+.one-pro .add .add-cart {
+    position: relative;
+}
+.one-pro .add .add-cart.added {
+    cursor: default !important;
+}
+.one-pro .add .add-cart.added {
+    background-color: var(--hover-color) !important;
+}
+
+.one-pro .add-cart .text,
+.one-pro .add-cart > i{
+    opacity: 1;
+    transition-duration: 0.2s;
+}
+
+.one-pro .add-cart.added .text,
+.one-pro .add-cart.added > i{
+    opacity: 0;
+}
+.one-pro .add-cart.added {
+justify-content: center;
+}
+
+.one-pro .added-text
+{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+
+}
+.one-pro .added-text i
+{
+    font-size: 25px;
+    position: absolute;
+    left: -250px;
+    transition-duration: 0.5s;
+}
+.one-pro .added-text span
+{
+    position: absolute;
+    right: -250px;
+    transition-duration: 0.3s;
+
+}
+
+
+.one-pro .add-cart.added .added-text i{
+    position: relative;
+    left: 0;
+}
+.one-pro .add-cart.added .added-text span{
+    position: relative;
+    right: 0;
+}
+.one-pro .add-cart .add-cart-btn{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
+
 /* End Popular */
 
 /* Start Categories */
@@ -194,29 +268,37 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--hover-color);
-    border-radius: 5px;
+    background-color:white;
     padding: 20px;
+    border-bottom:5px solid var(--default-color) ;
 }
 .categories .container .cat-header h3 {
-    color: white;
+    color: var(--default-color);
     font-size: 40px;
     margin: 0;
+    font-weight: 600;
 }
 .categories .container .cat-header a{
     font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    color: white;
+    font-size: 25px;
+    color: var(--default-color);
     position: relative;
-    letter-spacing: 5px;
+    letter-spacing: 0px;
     padding-right: 35px;
+    transition-duration: 0.3s ;
 
+}
+.categories .container .cat-header a:hover{
+    color: var(--hover-color);
 }
 .categories .container .cat-header a::before{
     font-family: "Font Awesome 6 Free";
     position: absolute;
-    font-weight: 900;
-    right: 0;
+    font-weight: 600;
+    right: 10px;
+    font-size: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .categories .container  .cat .parent {
@@ -225,7 +307,7 @@
     padding: 15px;
     justify-content: space-between;
 }
-.categories .container  .cat .parent i {
+.categories .container  .cat .parent > i {
     margin: 0px;
     font-size: 25px;
     font-weight: 900;
@@ -266,3 +348,137 @@
 }
 
 /* End Categories */
+
+
+.landing
+{
+position: relative;
+height: calc(100vh - 100px);
+overflow: hidden;
+}
+.landing .back
+{
+    height: 100%;
+    width: 120%;
+    position: absolute;
+    bottom: 15%;
+    left: -30px;
+    background-color: var(--section-background);position: absolute;
+    z-index: -1;
+    transform: rotate(-5deg) scaleX(1.1);
+}
+.landing .container
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+.landing .container .text
+{
+    width: 42%;
+    position: relative;
+    top: -70px;
+   
+}
+.landing .container img
+{
+    width: 50%;
+    position: relative;
+    top: -70px;
+    animation-name: updown;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+   
+}
+@keyframes updown {
+    0%
+    {
+        top: -70px;
+    }
+    25%
+    {
+        top: -50px;
+    }
+    50%
+    {
+        top: -70px;
+    }
+    75%
+    {
+        top: -100px;
+    }
+    100%{
+        top: -70px;
+    }
+    
+}
+@media (max-width : 991px)
+{
+    .landing .container img
+    {
+        /* display: none; */
+    }
+    .landing .container .text
+    {
+    width: 100%;
+    text-align: center;
+    }
+    .landing .container 
+    {
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    }
+}
+.landing .container h3{
+    margin: 0;
+    font-size: 35px;
+}
+.landing .container p{
+ 
+    font-size: 21px;
+    line-height: 1.8;
+    color: #666;
+    margin-top: 5px;
+    color: var(--default-color);
+
+}
+
+.landing::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\f103";
+    font-weight: 900;
+    color: var(--default-color);
+    font-size: 30px;
+    position: absolute;
+    left: 50%;
+    bottom: 40px;
+    transform: translatex(-50%);
+    animation-name: arr;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes arr {
+    0%{
+        bottom: 40px; 
+    }
+    20%{
+        bottom: 20px;
+    }
+    40%{
+        bottom: 40px;
+    }
+    60%{
+        bottom: 20px;
+    }
+    80%{
+        bottom: 20px;
+    }
+    100%{
+        bottom: 40px;
+    }
+    
+}
