--- a/css/master.css
+++ b/css/master.css
@@ -20,6 +20,7 @@ body.poped{
 }
 a {
   text-decoration: none;
+  color: black;
 }
 ul {
   list-style: none;
@@ -32,6 +33,9 @@ input{
 *:focus{
   outline: none;
 }
+*{
+  caret-color: var(--default-color);
+}
 
 .container {
   padding-left: 20px;
@@ -42,6 +46,7 @@ input{
 }
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 ::-webkit-scrollbar-track {
   background-color: white;
@@ -62,3 +67,38 @@ input{
 
 
 
+
+/* Circle Loader */
+
+.loader-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+  background-color: white;
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.loader-container.hide{
+  opacity: 0;
+  visibility: none;
+}
+.loader {
+  border: 13px solid var(--input-color);
+  border-top: 13px solid var(--default-color); 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 0.5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
